--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
     <title>Al-Raqam</title>
   </head>
-  <body style="background-color: #f8f9fa;">
+  <body style="background-color: #f8f9fa; max-width: 1440px;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
